plugins {
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
}

group = 'org.prgrms'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.6.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-jdbc:2.6.0'

	implementation 'mysql:mysql-connector-java'
	implementation 'com.h2database:h2:'

	testImplementation 'com.wix:wix-embedded-mysql:4.6.2'

	implementation 'org.springframework.boot:spring-boot-starter-aop:2.6.0'

	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
